--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "npm run tsc && npm version patch && npm publish",
-    "tsc": "tsc"
+    "tsc": "tsc && npm pack"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
   },
   "files": [
     "dist",
-    "typings"
+    "typings",
+    "scss"
   ]
 }
